apps/media/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: calibre
    app.kubernetes.io/name: calibre
  name: calibre
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: webserver-gui
  selector:
    app.kubernetes.io/instance: calibre
    app.kubernetes.io/name: calibre
  type: ClusterIP
